--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.11.0",
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.7",
+    "apexcharts": "^3.46.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "font-awesome": "^4.7.0",
     "formik": "^2.4.5",
     "mui-file-input": "^4.0.4",
     "react": "^18.2.0",
